--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "axios": "^1.6.5",
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
