--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 
-/mirror_react/.pnp
-/mirror_react/.pnp.js
-/mirror_react/coverage
-/mirror_react/build
-/mirror_react/.DS_Store
-/mirror_react/.env.local
-/mirror_react/.env.development.local
-/mirror_react/.env.test.local
-/mirror_react/.env.production.local
-/mirror_react/core
+/frontend/.pnp
+/frontend/.pnp.js
+/frontend/coverage
+/frontend/build
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/core
 /finances/*.sh
 npm-debug.log*
 yarn-debug.log*
@@ -18,3 +17,4 @@ node_modules
 .env
 portfolio*.csv
 calorie*.csv
+.DS_Store
